feat: CRUD Role Master

--- a/src/css/tailwind/_base.css
+++ b/src/css/tailwind/_base.css
@@ -1,1 +1,20 @@
 @tailwind base;
+
+[type='text']:focus,
+input:where(:not([type])),
+[type='email']:focus,
+[type='url']:focus,
+[type='password']:focus,
+[type='number']:focus,
+[type='date']:focus,
+[type='datetime-local']:focus,
+[type='month']:focus,
+[type='search']:focus,
+[type='tel']:focus,
+[type='time']:focus,
+[type='week']:focus,
+[multiple]:focus,
+textarea:focus,
+select:focus {
+  --tw-ring-color: #0000;
+}
